--- a/ros/src/pentapod_server/config/teb_local_planner_params.yaml
+++ b/ros/src/pentapod_server/config/teb_local_planner_params.yaml
@@ -21,7 +21,7 @@ acc_lim_y: 0.05
 acc_lim_theta: 0.1
 min_in_place_vel_theta: 0.3
 
-# Footprint model is a point in order to save CPU, consider a point and keep distance via min_obstacle_dist
+# Footprint model is a point in order to save CPU, distance to walls is kept via min_obstacle_dist
 footprint_model: 
   type: point            # types: "point", "circular", "two_circles", "line", "polygon" type: "line"
 
@@ -46,7 +46,7 @@ weight_acc_lim_theta: 3.0
 
 # Optimization weight for satisfying the non-holonomic kinematics. Set to 0 since strafing has equal cost like driving forward
 weight_kinematics_nh: 1.0                   # do not create trajectories for car-like robots but for small pentapods with strifing. I feel that a factor below 1.0 more osscilations 
-weight_kinematics_forward_drive: 0.5        # do not try to drive forward.
+weight_kinematics_forward_drive: 0.0        # do not try to drive forward.
 weight_kinematics_turning_radius: 0.0       # do not try to optimize the turning radius
 weight_inflation: 0.8                       # weight how much the inflation_dist is considered (pretty much to avoid lurking too close too walls)
 
